# DEX-_-Edited-version-

./: .gitignore  DEX++.luau  DEX++_compiled.luau  README.md  build.py
HelperApp/: DEXHelperApp.csproj  MainForm.cs  Program.cs  build.bat
HelperApp(incompleted)/: README.md
HelperServer/: AST.cpp  AST.h  CMakeLists.txt  CMakePresets.json  Clean_Local_Data.bat  Common.h  Dashboard.cpp  Dashboard.h  Decompiler.cpp  HttpUtil.cpp  HttpUtil.h  Index.cpp  Index.h  Routes.cpp  Stop_Local_Services.bat  Toolchain.cpp  Toolchain.h  Win32App.cpp  Win32App.h  WsProtocol.cpp  compile.bat  dex_helper.db  dex_server_logs.txt  main.cpp
HelperServer/dashboard/: index.html
HelperWorkers/: build.ps1
Modules/: ActivityMap.luau  ClientIndex.luau  ClientIntelligence.luau  CodeSearch.luau  ControlCenter.luau  DependencyGraph.luau  Explorer.luau  ImageViewer.luau  InspectorHub.luau  Lib.luau  ObjectLinks.luau  PropertyTracker.luau  README.md  RemoteFuzzer.luau  RemoteUsageMap.luau  RuntimeInspector.luau  ScriptRelations.luau  ScriptViewer.luau  SecurityAuditor.luau  SettingsWindow.luau  SmartDecompiler.luau  SmartSearch.luau  ThreadManager.luau
Modules/Core/: Config.luau  Console.luau  DecompilerService.luau  Lib.luau  Logger.luau  LucideDockIcons.luau  MainMenu.luau  (+6 more)
Plugins/: HttpSpy.luau  LoadedModuleSpy.luau  MetatableHookManager.luau  RemoteSpy.luau  TableEditor.luau
ToolchainSetup/: compile.bat  main.c
__pycache__/: build.cpython-314.pyc.2879338283536
scratch/: mock_roblox.js  package-lock.json  test_ws.js
scripts/: run_tests.py
tools/: build_lucide_icons.py
(+41 files in other folders)
